syntax = "proto3";
package api.pb.mail;
option go_package = "github.com/textileio/go-mail/api/pb/mail";

message Message {
    string id = 1;
    string from = 2;
    string to = 3;
    bytes body = 4;
    bytes signature = 5;
    int64 created_at = 6;
    int64 read_at = 7;
}

// to email or to thread
message SendMessageRequest {
    string thread = 1; // sender's thread.ID and did.Token 
    string to = 2;  // pub key of receiver
    bytes to_body = 3;
    bytes to_signature = 4;
    bytes from_body = 5;
    bytes from_signature = 6;
}

message SendMessageResponse {
    string id = 1;
    int64 created_at = 2;
}

enum MailboxMessageStatus {
    UNSPECIFIED = 0;
    ALL = 1;
    READ = 2;
    UNREAD = 3;
}

message ListInboxMessagesRequest {
    string thread = 1;
    string seek = 2;
    int64 limit = 3;
    bool ascending = 4;
    MailboxMessageStatus status = 5;
}

message ListInboxMessagesResponse {
    repeated Message messages = 1;
}

message ListSentboxMessagesRequest {
    string thread = 1;
    string seek = 2;
    int64 limit = 3;
    bool ascending = 4;
    MailboxMessageStatus status = 5;
}

message ListSentboxMessagesResponse {
    repeated Message messages = 1;
}

message ReadInboxMessageRequest {
    string thread = 1;
    string id = 2;
}

message ReadInboxMessageResponse {
    int64 read_at = 1;
}

message DeleteInboxMessageRequest {
    string thread = 1;
    string id = 2;
}

message DeleteInboxMessageResponse {}

message DeleteSentboxMessageRequest {
    string thread = 1;
    string id = 2;
}

message DeleteSentboxMessageResponse {}

message ArchivesLsRequest {
}

message ArchivesLsResponse {
    repeated ArchiveLsItem archives = 1;
}

message ArchiveLsItem {
    string cid = 1;
    repeated ArchiveLsItemMetadata info = 2;
}

message ArchiveLsItemMetadata {
    uint64 deal_id = 1;
}

message ArchivesImportRequest {
    string cid = 1;
    repeated uint64 deal_ids = 2;
}

message ArchivesImportResponse {}

message ArchiveRetrievalLsRequest {}

message ArchiveRetrievalLsResponse {
    repeated ArchiveRetrievalLsItem retrievals = 1;
}

message ArchiveRetrievalLsItem {
	string id = 1;
	string cid = 2;
	ArchiveRetrievalStatus status = 3;
	string failure_cause = 4;
	int64 created_at = 5;

	oneof retrieval_type {
		ArchiveRetrievalLsItemNewBucket new_bucket = 6;
	}
}

message ArchiveRetrievalLsItemNewBucket {
	string name = 1;
	bool private = 2;
}

enum ArchiveRetrievalStatus {
    ARCHIVE_RETRIEVAL_STATUS_UNSPECIFIED = 0;
    ARCHIVE_RETRIEVAL_STATUS_QUEUED = 1;
    ARCHIVE_RETRIEVAL_STATUS_EXECUTING = 2;
    ARCHIVE_RETRIEVAL_STATUS_MOVETOBUCKET = 3;
    ARCHIVE_RETRIEVAL_STATUS_FAILED = 4;
    ARCHIVE_RETRIEVAL_STATUS_CANCELED = 5;
    ARCHIVE_RETRIEVAL_STATUS_SUCCESS = 6;
}

message ArchiveRetrievalLogsRequest {
    string id = 1;
}

message ArchiveRetrievalLogsResponse {
    string msg = 1;
}

service APIService {
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
    rpc ListInboxMessages(ListInboxMessagesRequest) returns (ListInboxMessagesResponse) {}
    rpc ListSentboxMessages(ListSentboxMessagesRequest) returns (ListSentboxMessagesResponse) {}
    rpc ReadInboxMessage(ReadInboxMessageRequest) returns (ReadInboxMessageResponse) {}
    rpc DeleteInboxMessage(DeleteInboxMessageRequest) returns (DeleteInboxMessageResponse) {}
    rpc DeleteSentboxMessage(DeleteSentboxMessageRequest) returns (DeleteSentboxMessageResponse) {}
}
